Add result to frontend challenge

--- a/src/routes/frontend-challenge.sass
+++ b/src/routes/frontend-challenge.sass
@@ -28,8 +28,11 @@
     padding: 2rem
     display: block
     margin: 0 -2rem 2rem
+    word-break: break-word
     word-break: break-all
     white-space: pre-wrap
+    overflow: hidden
+    text-overflow: ellipsis
 
     .wrongComment
       opacity: 0.5
