Green text on frontend challenge completion

--- a/src/routes/frontend-challenge.sass
+++ b/src/routes/frontend-challenge.sass
@@ -37,7 +37,7 @@
     .wrongComment
       opacity: 0.5
 
-    .correctComment
+    .correctComment, &.allTestsPassed
       color: #6aa573
 
   strong
