--- a/src/cases/components/text-block.sass
+++ b/src/cases/components/text-block.sass
@@ -91,6 +91,5 @@
         @media screen and (min-width: 900px)
           max-width: 56rem
 
-        // @media screen and (min-width: 1191px)
-
-        //   max-width: none
+        @media screen and (min-width: 1191px)
+          max-width: 63rem
