--- a/src/cases/components/parallax-bump-block.sass
+++ b/src/cases/components/parallax-bump-block.sass
@@ -106,6 +106,12 @@
 
         > h1, h2
           margin-top: 0
+          font-weight: 500
+          color: #161D2B
+
+        p
+          color: #737780
+          opacity: 1 !important
 
       > .parallaxes
         margin: 0 auto
