--- a/src/cases/components/text-and-image.sass
+++ b/src/cases/components/text-and-image.sass
@@ -76,6 +76,7 @@
             margin-bottom: 1.6rem
             font-size: 2.5rem
             font-weight: 500
+            color: #161D2B
 
             @media screen and (min-width: 701px)
               font-size: 3rem
@@ -86,4 +87,3 @@
           .text
             font-size: 2rem
             line-height: 2.8rem
-            opacity: 0.8
