--- a/src/cases/components/text-block.sass
+++ b/src/cases/components/text-block.sass
@@ -26,8 +26,18 @@
         @media screen and (min-width: 900px)
           width: 8.2rem
 
-    > h1
+    .title
+      font-size: 2.5rem
+      font-weight: 500
+      color: #161D2B
       white-space: pre-line
+
+      @media screen and (min-width: 701px)
+        font-size: 3rem
+
+      @media screen and (min-width: 1001px)
+        font-size: 4rem
+
 
     > .content
       display: flex
@@ -66,6 +76,10 @@
 
       @media screen and (min-width: 900px)
         flex-direction: row
+
+      > p
+        color: #737780
+        opacity: 1
 
       > p:nth-of-type(2)
         position: relative
