--- a/src/cases/components/three-block.sass
+++ b/src/cases/components/three-block.sass
@@ -122,34 +122,10 @@
             text-align: center
             width: 100%
 
-
-
-  &.nordish-branding
-    > .inner  > .blocks >
-      .block:nth-child(1)::after
-        @media screen and (min-width: $small-grid + 51px)
-          content: ""
-          position: absolute
-          top: 0
-          right: 0
-          width: 25%
-          height: 100%
-          background: linear-gradient(to left, white, rgba(255, 255, 255, 0))
-
-      .block:nth-child(2)
-        margin-top: 4rem
-
-        @media screen and (min-width: $small-grid + 51px)
-          padding-left: 6rem
-
-        @media screen and (min-width: $medium-grid)
-          padding-left: 9rem
-          margin: 0
-          display: flex
-          flex-direction: column
-          height: 100%
-          margin: 0
-          justify-content: center
+  &.nordish-kitchen
+    p
+      color: #737780
+      opacity: 1 !important
 
   &.vertical-center-content, &.nordish-kitchen
     > .inner  > .blocks >
@@ -183,10 +159,13 @@
     position: relative
     width: 100%
     height: auto
+    width: calc(100% + 4rem)
+    margin-left: -2rem
 
     @media screen and (min-width: $small-grid + 51px)
       width: 100%
       height: 100%
+      margin-left: 0
 
     img
       top: 0
