Copy fix + style fixes for barsebäck case

--- a/src/cases/barseback.sass
+++ b/src/cases/barseback.sass
@@ -21,12 +21,22 @@
       background: #1F2722
       color: inherit
 
-    > *:not(:last-child)
+    > *:not(:nth-child(1)):not(:nth-child(2)):not(:last-child)
       margin-bottom: 2rem
 
-    > .image
+    .image
+      display: block
+      position: relative
       width: 100%
       max-width: 135rem
       margin-left: auto
       margin-right: auto
       padding: 0 2rem
+
+    .textAboveImage
+      display: block
+      position: absolute
+      top: 50%
+      left: 50%
+      transform: translate(-50%, -50%)
+      text-align: center
