--- a/src/animations.sass
+++ b/src/animations.sass
@@ -51,3 +51,10 @@
     opacity: 1
     transform: none
 
+@keyframes rotateIn
+  from
+    opacity: 0
+    transform: rotate(-25deg)
+  to
+    opacity: 1
+    transform: none
