--- a/src/cases/components/text-two-col.sass
+++ b/src/cases/components/text-two-col.sass
@@ -22,7 +22,7 @@
     margin-bottom: 2rem
     font-size: 2.5rem
     line-height: 3.6rem
-    font-weight: normal
+    font-weight: 500
 
     @media screen and (min-width: 701px)
       font-size: 3rem
@@ -49,3 +49,7 @@
 
     @media screen and (min-width: 850px)
       margin-top: 6rem
+
+  &.wearevoice
+    .title
+      font-weight: normal
