Add links for weekly revolt case + style fix

--- a/src/cases/weekly-revolt.sass
+++ b/src/cases/weekly-revolt.sass
@@ -87,7 +87,7 @@
               width: 100vw
 
               > img
-                height: fit-content
+                height: auto
                 width: 100%
 
     > .companyGrowth
