--- a/src/components/projects-block.sass
+++ b/src/components/projects-block.sass
@@ -112,6 +112,15 @@
         //   height: 100%
         //   min-width: 100%
 
+    .imageBgBeforeHover
+      position: absolute
+      top: 0
+      left: 0
+      height: 100%
+      width: 100%
+      object-fit: cover
+      object-position: center
+
     @for $i from 1 through 40
       @if $i % 5 == 1 or $i % 5 == 2
         &:nth-child(#{$i})
