--- a/src/routes/careers.sass
+++ b/src/routes/careers.sass
@@ -245,7 +245,7 @@
           margin-bottom: 6rem
           padding: 0 3rem
 
-        > .content > .workplace, > .content > .position,
+        > .content > .workplace, > .content > .position
           background: #0E121A
           flex-direction: column !important
           height: auto
