Updated kludd case with new images and copy.

--- a/src/cases/components/center-block.sass
+++ b/src/cases/components/center-block.sass
@@ -210,3 +210,7 @@
       > .content
         p
           opacity: 1
+
+  &.kludd-left-align
+    > .inner > .content > .block > p
+      text-align: left
