--- a/src/cases/kludd.sass
+++ b/src/cases/kludd.sass
@@ -88,43 +88,6 @@
       @media screen and (min-width: 850px)
         display: block
 
-  .desktopAppBlock
-    overflow: hidden
-    background: #F8F8F9
-    padding: 30px 0
-
-    @media screen and (min-width: 850px)
-      padding: 20px 0
-
-    .appImages
-      display: flex
-      justify-content: center
-      width: 150vw
-      margin-left: -25vw
-
-      @media screen and (min-width: 1700px)
-        width: 120vw
-        margin-left: -10vw
-
-      &:nth-of-type(1) .appImage
-        transform: translateX(-5rem) translateZ(0)
-
-      &:nth-of-type(2) .appImage
-        transform: translateX(5rem) translateZ(0)
-
-      &:global(.inView) .appImage
-        opacity: 1
-        transform: none
-
-    .appImage
-      width: 33%
-      opacity: 0
-      transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out
-
-      @for $i from 1 through 5
-        &:nth-of-type(#{$i})
-          transition-delay: #{0.2 + $i * 0.2}s
-
   .brandBlock
     .inner
       max-width: $max-width
@@ -133,10 +96,10 @@
       text-align: center
 
       @media screen and (min-width: 850px)
-        padding: 10rem 3rem 12rem
+        padding: 0rem 3rem 12rem
 
       @media screen and (min-width: 1100px)
-        padding: 16rem 3rem
+        padding: 0rem 3rem 15rem
 
     .textWrapper
       margin: 0 0 10rem
@@ -172,7 +135,7 @@
       width: 100%
 
       @media screen and (min-width: 850px)
-        grid-template-columns: 50%
+        grid-template-columns: repeat(2, 1fr)
         grid-auto-rows: 70rem
         gap: 5rem
 
@@ -195,11 +158,14 @@
           img
             max-width: 70rem
 
+        &:last-of-type
+          padding: 0
+          grid-area: span 1 / span 2
+
       img
         align-self: center
         width: 100%
         height: 100%
-        max-width: 44rem
         object-fit: contain
 
   .darkModeBlock
