Picadeli case (WIP)

--- a/src/cases/components/bookmark-block.sass
+++ b/src/cases/components/bookmark-block.sass
@@ -228,3 +228,26 @@
 
       \:global(.challenge)
         margin-top: 6rem
+
+  &.picadeli
+
+    .inner
+      padding: 0 3rem
+
+    .content
+      padding: 9.6rem 0 0
+      text-align: center
+
+      @media screen and (min-width: 721px)
+        padding: 8.6rem 5rem 8.6rem 0
+        text-align: left
+
+    img
+      width: 150%
+      margin-right: -50%
+      padding-top: 2rem
+
+      @media screen and (min-width: 721px)
+        width: 75%
+        margin-right: -25%
+        padding-top: 8.6rem
