--- a/src/components/team-block.sass
+++ b/src/components/team-block.sass
@@ -76,7 +76,7 @@
       min-height: 100%
       opacity: 1
 
-      &[alt='Anders Olausson'], &[alt='Donovan Söderlund'], &[alt='Viktor Hesselbom']
+      &[alt='Anders Dewrang'], &[alt='Donovan Söderlund'], &[alt='Viktor Hesselbom']
         height: 45rem
 
     &:after
@@ -89,32 +89,25 @@
       left: 0
       z-index: -1
       opacity: 0.81
-      background: rgba(4,21,54,0.70)
+      background: rgba(4,21,54,0.60)
 
     @media screen and (min-width: 1040px)
+      &:nth-child(2)
+        grid-row: span 19
 
       &:nth-child(4)
-        grid-row: span 23
+        grid-row: span 22
 
-      &:nth-child(6)
-        grid-row: span 16
-
-      &:nth-child(8)
-        grid-row: span 20
-
-      &:nth-child(2)
-        grid-column: 2
-
-      &:nth-child(3)
-        grid-column: 3
-        grid-row: 1 / span 23
-
-      &:nth-child(8)
-        grid-column: 3
-        grid-row: 40 / span 23
+      &:nth-child(12)
+        grid-row: span 19
 
       &:nth-child(14)
-        grid-row: span 23
+        grid-row: span 22
+
+      // Recruiting
+      &:nth-child(9)
+        grid-column: 3
+        grid-row: 35 / span 17
 
   @media screen and (max-width: 1040px)
     grid-template-columns: repeat(2, 1fr)
