Picadeli case (WIP).

--- a/src/cases/components/bookmark-block.sass
+++ b/src/cases/components/bookmark-block.sass
@@ -242,6 +242,9 @@
         padding: 8.6rem 5rem 8.6rem 0
         text-align: left
 
+      .text
+        opacity: 1
+
     img
       width: 150%
       margin-right: -50%
