--- a/src/cases/components/center-block.sass
+++ b/src/cases/components/center-block.sass
@@ -188,3 +188,9 @@
       @media screen and (min-width: $small-grid)
         max-width: 110rem
         width: 100%
+
+  &.picadeli
+    > .block
+      > .content
+        p
+          opacity: 1
