Minor adjustments to picadeli case.

--- a/src/cases/picadeli.sass
+++ b/src/cases/picadeli.sass
@@ -38,7 +38,7 @@ $textColor: #737780
       max-width: 120rem
       margin: 0 auto
       text-align: center
-      padding: 8rem 3rem 0
+      padding: 9.6rem 3rem 0
 
       @media screen and (min-width: 1024px)
         padding: 16rem 3rem 0
@@ -76,6 +76,7 @@ $textColor: #737780
 
     .imageBlock
       display: flex
+      justify-content: center
       width: 100%
       margin-top: 4rem
       
@@ -83,10 +84,7 @@ $textColor: #737780
         margin-top: 6rem
 
       .image
-        display: flex
         min-width: calc(50% - 1rem)
-        align-self: center
-        object-fit: cover
         margin: 0 -10vw
 
 .strike
