--- a/src/cases/components/text-two-col.sass
+++ b/src/cases/components/text-two-col.sass
@@ -53,3 +53,12 @@
   &.wearevoice
     .title
       font-weight: normal
+
+  &.picadeli
+    padding: 9.6rem 3rem 4rem
+
+    @media screen and (min-width: 850px)
+      padding: 10rem 3rem 4rem
+
+    @media screen and (min-width: 1100px)
+      padding: 16rem 3rem 10rem
