Added nyctea case.

--- a/src/cases/components/large-image.sass
+++ b/src/cases/components/large-image.sass
@@ -136,4 +136,8 @@
       &:global(.inView)
         animation: fadeIn .8s forwards .2s
 
+  &.nyctea
+    .img
+      min-height: 40rem
+      width: 100%
 
