--- a/src/cases/components/side-by-side-block.sass
+++ b/src/cases/components/side-by-side-block.sass
@@ -80,3 +80,23 @@
 
       &:global(.inView)
         animation: fadeIn 1s forwards .2s
+
+
+  &.nyctea,
+  &.nycteaPossible
+    flex-direction: column
+
+    @media screen and (min-width: $small-grid)
+      flex-direction: row-reverse
+
+    .block
+      display: flex
+      align-items: center
+      justify-content: center
+
+  &.nycteaPossible
+    @media screen and (min-width: $small-grid)
+      flex-direction: row
+
+    img
+      display: block
