Add images and update styling in bauer

--- a/src/cases/components/text-block.sass
+++ b/src/cases/components/text-block.sass
@@ -29,7 +29,7 @@
     .title
       font-size: 2.5rem
       font-weight: 500
-      color: #161D2B
+      color: inherit
       white-space: pre-line
 
       @media screen and (min-width: 701px)
