--- a/src/settings.sass
+++ b/src/settings.sass
@@ -1,6 +1,8 @@
 $color-red: #ec193e
 $color-dark-blue: #151b28
 $color-darker-blue: #070b13
+$empty-space: #141415
+$textDark: #070B13
 
 $max-width: 120rem
 $global-padding: 9.6rem 3rem
@@ -12,4 +14,3 @@ $medium-grid: 1040px
 $breakpoint-mobile-large: 720px
 $breakpoint-desktop: 1024px
 $breakpoint-desktop-large: 1350px
-
