Styling design section

--- a/src/cases/components/side-by-side-block.sass
+++ b/src/cases/components/side-by-side-block.sass
@@ -140,3 +140,8 @@
 
     @media screen and (min-width: $small-grid)
       flex-direction: row
+  &.bauer-university
+    .textWrapper
+      background: $lighter-space
+    img 
+      padding: 10rem 0
