--- a/src/cases/bauer-university.sass
+++ b/src/cases/bauer-university.sass
@@ -18,30 +18,40 @@ $cloudy-heaven: #F1F5F7
     display: flex
     flex-direction: column
     align-items: center
-    margin-top: 15rem
+    margin-top: 10rem
     padding-bottom: 15rem
+    padding: 0 2rem
+    @media screen and (min-width: 850px)
+      padding: 0      
+      margin-top: 15rem
 
-    .imageBlock
+    .image  
+      display: flex
+      object-fit: cover
+      align-self: center
+      max-width: 100%
+      height: 100%
       max-height: 50rem
       @media screen and (min-width: 850px)
         max-height: 70rem
+    
+    .imageHideOnMobile
+        display: none
+        @media screen and (min-width: 850px)
+          display: block
 
-      .image  
-        max-width: 100%
-        display: flex
-        min-width: calc(50% - 1rem)
-        align-self: center
-        object-fit: cover
-
-    .imageContainer
+    .imageGrid
       position: relative
       top: -10rem
       display: flex
       flex-direction: column
+      justify-content: center 
+      gap: 5rem
       z-index: 1
       @media screen and (min-width: 850px)
+        max-width: 145rem
         flex-direction: row
-        gap: 5rem
+        margin: 0 5rem
 
 
   
