--- a/src/settings.sass
+++ b/src/settings.sass
@@ -2,6 +2,7 @@ $color-red: #ec193e
 $color-dark-blue: #151b28
 $color-darker-blue: #070b13
 $empty-space: #141415
+$lighter-space: #19191B
 $textDark: #070B13
 
 $max-width: 120rem
