--- a/src/cases/bauer-university.sass
+++ b/src/cases/bauer-university.sass
@@ -53,6 +53,21 @@ $cloudy-heaven: #F1F5F7
         flex-direction: row
         margin: 0 5rem
 
+  .statsSection > div > .badges 
+    position: relative
+    height: 40rem
+    width: 32rem
+    > img 
+      position: absolute
+    img:nth-child(1)
+      top: 0
+      left: 10%
+    img:nth-child(2)
+      right: 0
+      bottom: 10%
+    img:nth-child(3)
+      bottom: 0
+      left: 0
 
   
 
