--- a/src/settings.sass
+++ b/src/settings.sass
@@ -4,6 +4,7 @@ $color-darker-blue: #070b13
 $empty-space: #141415
 $lighter-space: #19191B
 $textDark: #070B13
+$cloudy-sky: #F2F5F6
 
 $max-width: 120rem
 $global-padding: 9.6rem 3rem
@@ -13,5 +14,6 @@ $small-grid: 700px
 $medium-grid: 1040px
 
 $breakpoint-mobile-large: 720px
+$breakpoint-tablet: 801px
 $breakpoint-desktop: 1024px
 $breakpoint-desktop-large: 1350px
