Fix engagement section

--- a/src/cases/components/bookmark-block.sass
+++ b/src/cases/components/bookmark-block.sass
@@ -254,3 +254,8 @@
         width: 75%
         margin-right: -25%
         padding-top: 8.6rem
+  &.bauer-university
+    .inner 
+      flex-direction: column
+      @media screen and (min-width: $breakpoint-mobile-large)
+        flex-direction: row-reverse
