--- a/src/cases/bauer-university.sass
+++ b/src/cases/bauer-university.sass
@@ -20,7 +20,7 @@
     display: flex
     flex-direction: column
     align-items: center
-    margin-top: 10rem
+    margin-bottom: -10rem
     padding-bottom: 15rem
     padding: 0 2rem
     @media screen and (min-width: 850px)
@@ -40,6 +40,7 @@
     .imageHideOnMobile
         display: none
         @media screen and (min-width: 850px)
+          margin-bottom: 10rem
           display: block
 
     .imageGrid
