--- a/src/cases/components/text-block.sass
+++ b/src/cases/components/text-block.sass
@@ -107,3 +107,6 @@
 
         @media screen and (min-width: 1191px)
           max-width: 63rem
+
+  \:global(.bauer-university)  
+    margin-bottom: 10rem
