--- a/src/cases/bauer-university.sass
+++ b/src/cases/bauer-university.sass
@@ -4,7 +4,7 @@
   position: relative
   padding-top: 14rem
   background: $empty-space
-  color: #FFF
+  color: $white
   width: 100%
 
   > .inner
@@ -55,11 +55,13 @@
         max-width: 145rem
         flex-direction: row
         margin: 0 5rem
+
   .engagementSection
     & > div > .badges 
       position: relative
       height: 40rem
       width: 32rem
+
       > img 
         position: absolute
       img:nth-child(1)
