--- a/src/settings.sass
+++ b/src/settings.sass
@@ -5,6 +5,7 @@ $empty-space: #141415
 $lighter-space: #19191B
 $textDark: #070B13
 $cloudy-sky: #F2F5F6
+$white: #FFF
 
 $max-width: 120rem
 $global-padding: 9.6rem 3rem
